# flatcloth

./: CMakeLists.txt  LICENSE  README.md  make_debug.sh  make_release.sh
assets/shaders/: mesh_textured_fs.glsl  mesh_textured_vs.glsl  skybox_fs.glsl  skybox_vs.glsl
src/: camera_system.cc  camera_system.h  components.cc  components.h  dynamic_system.cc  dynamic_system.h  ecs.cc  ecs.h  engine.cc  engine.h  factory.cc  factory.h  fc_data.cc  fc_data.h  fc_tools.cc  fc_tools.h  fc_types.cc  fc_types.h  input.cc  input.h  main.cc  opengl.cc  opengl.h  render_system.cc  render_system.h  shader.cc  shader.h  skybox_system.cc  skybox_system.h  stb_image.h  texture.cc  texture.h
